--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,7 +3,7 @@
 # All changes must be approved by internal reviewers before being merged to main branch.
 #
 
-* @Unique-AG/data-science
+* @Unique-AG/data-science @Unique-AG/codev
 
 # Code permissions
 # ! These must appear last as they must be the most specific and enforced
